Version 0.12.0

  * The build system has been split into a library (libbuild2) and a driver.

    As part of this change the following configuration macros (normally
    supplied via the -D preprocessor options) have been renamed from their
    old BUILD2_* versions to:

    LIBBUILD2_MTIME_CHECK
    LIBBUILD2_SANE_STACK_SIZE
    LIBBUILD2_DEFAULT_STACK_SIZE
    LIBBUILD2_ATOMIC_NON_LOCK_FREE


Version 0.11.0

  * Initial work on header unit importation and include translation support.

    In particular, for GCC, the (experimental) module mapper approach is now
    used to handle header unit importation, include translation, and headers
    dependency extraction, all with support for auto-generated headers.

  * Generalized target/prerequisite variable blocks.

    Target/prerequisite-specific variable blocks can now be present even if
    there are prerequisites. For example, now instead of:

    exe{foo}: cxx{foo}
    exe{foo}: cc.loptions += -rdynamic

    Or:

    exe{foo}: cxx{foo}
    exe{foo}:
    {
      cc.loptions += -rdynamic
      cc.libs += -ldl
    }

    We can write:

    exe{foo}: cxx{foo}
    {
      cc.loptions += -rdynamic
      cc.libs += -ldl
    }

    This also works with dependency chains in which case the block applies to
    the set of prerequisites (note: not targets) before the last ':'. For
    example:

    ./: exe{foo}: libue{foo}: cxx{foo}
    {
      bin.whole = false  # Applies to the libue{foo} prerequisite.
    }

  * Support for ad hoc target groups.

    In certain cases we may need to instruct the underlying tool (compiler,
    linker, etc) to produce additional outputs. For example, we may want to
    request the compiler to produce an assembler listing or the linker to
    produce a map file. While we could already pass the required options, the
    resulting files will not be part of the build state. Specifically, they
    will not be cleaned up and we cannot use them as prerequisites of other
    targets.
